include z-index and fix broken handlebars imports (#18)
* include z-index and fix broken handlebars imports
 🐿 v2.6.0

* linting
 🐿 v2.6.0

* more linting
 🐿 v2.6.0

* reduced o-share version to resolve conflict
 🐿 v2.6.0

* review comment
 🐿 v2.6.0

--- a/main.scss
+++ b/main.scss
@@ -170,6 +170,10 @@
 .invite-colleagues-banner__wrapper {
 	@include oBanner($class: 'o-banner', $themes: 'marketing-secondary');
 
+	.o-banner.o-banner--marketing-secondary {
+		z-index: 100;
+	}
+
 	.invite-colleagues__copy-link-button {
 		@include oButtonsTheme(inverse);
 		background-color: getColor('black');
